# xf86-video-intel

./: .gitignore  NEWS  README.md  configure.ac  meson.build  meson_options.txt
benchmarks/: dri3-swap.c
man/: intel.man
src/: Makefile.am  backlight.h  intel_device.c  intel_driver.h  intel_list.h  intel_module.c  intel_options.c  intel_options.h  meson.build
src/ega/: Makefile.am  README  README.md  dri2.c  driver.c  driver.h  drmmode_display.c  drmmode_display.h  dumb_bo.c  ega.h  ega_cpu_arch.c  ega_cpu_arch.h  ega_driver.c  ega_drm.c  ega_drm.h  ega_helpers.c  ega_helpers.h  ega_module.h  ega_pure.c  ega_pure.h  ega_video.c  ega_video.h  ega_xvmc_overlay.c  ega_xvmc_overlay.h  intel.h  meson.build  ms_compat.c  ms_compat.h  ms_ugly_hack.h  pageflip.c  present.c  vblank.c
src/ega/glamor/: Makefile.am  glamor.h  glamor_compat.h  glamor_composite_glyphs.c  glamor_egl.c  glamor_eglmodule.c  glamor_font.c  glamor_priv.h  glamor_ugly_hack.h  glamor_xv.c  meson.build
src/ega/glamor_xv/: Makefile.am  meson.build
src/legacy/: README.md
src/legacy/i810/: i810_dri.c  i810_driver.c  i810_video.c
src/legacy/i810/xvmc/: I810XvMC.c  meson.build
src/sna/: Makefile.am  blt.c  blt_avx2.h  blt_sse2.h  blt_sse42.h  blt_sse4_2.h  compiler.h  debug.h  gen3_render.c  gen4_render.c  gen4_vertex.c  gen5_render.c  gen6_render.c  gen7_render.c  gen7_render_mitigations.c  gen7_render_mitigations.h  gen8_render.c  gen8_vertex.c  gen9_render.c  kgem.h  kgem_debug_gen2.c  kgem_debug_gen3.c  meson.build  sna.h  sna_accel.c  sna_blt.c  sna_composite.c  sna_cpuid.h  sna_damage.c  sna_damage.h  sna_display.c  sna_display_fake.c  sna_dri2.c  sna_dri3.c  sna_driver.c  sna_glyphs.c  sna_present.c  sna_present.h  sna_render.c  sna_render.h  (+10 more)
src/sna/brw/: brw_eu.h  brw_test.h  brw_test_gen4.c  brw_test_gen5.c  brw_test_gen6.c  brw_test_gen7.c
src/sna/fb/: fbspan.c
src/uxa/: i915_video.c  intel.h  intel_display.c  intel_dri.c  intel_dri3.c  intel_driver.c  intel_present.c  intel_uxa.c  intel_uxa.h  intel_uxa_video.c  intel_video.c  uxa-glyphs.c  uxa-priv.h  uxa-render.c  uxa.c
test/: basic-copyarea.c  basic-fillrect.c  basic-putimage.c  present-race.c  present-speed.c  present-test.c  render-composite-solid.c  render-copy-alphaless.c  render-copyarea.c  render-fill-copy.c  render-fill.c  render-glyphs.c  render-trapezoid-image.c  render-trapezoid.c  test_log.c
tools/: virtual.c
xvmc/: intel_xvmc.c  intel_xvmc.h  meson.build
